// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications case pages Preview and publish page GET /case/123/preview-and-publish if already published, should render the page with the previous publishing info 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <form id=\\"pins-publish-case\\" class=\\"govuk-grid-row \\" method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-2\\">Preview and publish project</h1>
            <p class=\\"govuk-body govuk-!-margin-bottom-6\\">Check details before publishing</p>
        </div>
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class='pins-preview-table'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Project information</h2><a href='/applications-service/case/7/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Project details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case reference number</th>
                                <td class=\\"govuk-table__cell\\">CASE/07</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project name</th>
                                <td class=\\"govuk-table__cell\\">Title CASE/07</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sector</th>
                                <td class=\\"govuk-table__cell\\">Item EN 23</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Subsector</th>
                                <td class=\\"govuk-table__cell\\">Item EN 24</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case stage</th>
                                <td class=\\"govuk-table__cell\\">Pre-application</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project description</th>
                                <td class=\\"govuk-table__cell\\">Elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                                    Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi
                                    ut aliquip ex ea commodo consequat</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project email address</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project location</th>
                                <td class=\\"govuk-table__cell\\">London</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Grid references</th>
                                <td class=\\"govuk-table__cell\\">123456 (Easting)
                                    <br>987654 (Northing)</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Region(s)</th>
                                <td class=\\"govuk-table__cell\\">London EN,Yorkshire EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Map zoom level</th>
                                <td class=\\"govuk-table__cell\\">City EN</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Applicant information</h2><a href='/applications-service/case/7/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Applicant details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Organisation name</th>
                                <td class=\\"govuk-table__cell\\">Org name</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Website</th>
                                <td class=\\"govuk-table__cell\\">website.web</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Email address</th>
                                <td class=\\"govuk-table__cell\\">email@email.co</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Key dates</h2><a href='/applications-service/case/7/key-dates' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Key dates</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Anticipated submission date published</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Application submitted (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Acceptance decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Acceptance (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Non-Acceptance</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations open</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations close</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations to appear on website</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Preliminary Meeting start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination closing date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for submission of Recommendation</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Recommendation submitted to SoS</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Recommendation deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Decision deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date project withdrawn</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <button class=\\"govuk-button govuk-!-margin-top-5\\" data-module=\\"govuk-button\\">Accept and publish changes</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Preview and publish page GET /case/123/preview-and-publish if not yet published, should render the page with no previous publishing info 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <form id=\\"pins-publish-case\\" class=\\"govuk-grid-row \\" method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-2\\">Preview and publish project</h1>
            <p class=\\"govuk-body govuk-!-margin-bottom-6\\">Check details before publishing</p>
        </div>
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class='pins-preview-table'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Project information</h2><a href='/applications-service/case/4/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Project details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case reference number</th>
                                <td class=\\"govuk-table__cell\\">CASE/04</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project name</th>
                                <td class=\\"govuk-table__cell\\">Title CASE/04</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sector</th>
                                <td class=\\"govuk-table__cell\\">Transport EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Subsector</th>
                                <td class=\\"govuk-table__cell\\">Highways EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case stage</th>
                                <td class=\\"govuk-table__cell\\">Pre-Application</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project description</th>
                                <td class=\\"govuk-table__cell\\">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                    et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project email address</th>
                                <td class=\\"govuk-table__cell\\">some@ema.il</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project location</th>
                                <td class=\\"govuk-table__cell\\">London</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Grid references</th>
                                <td class=\\"govuk-table__cell\\">123456 (Easting)
                                    <br>987654 (Northing)</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Region(s)</th>
                                <td class=\\"govuk-table__cell\\">London EN,Yorkshire EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Map zoom level</th>
                                <td class=\\"govuk-table__cell\\">City EN</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Applicant information</h2><a href='/applications-service/case/4/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Applicant details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Organisation name</th>
                                <td class=\\"govuk-table__cell\\">Org name</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Website</th>
                                <td class=\\"govuk-table__cell\\">website.web</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Email address</th>
                                <td class=\\"govuk-table__cell\\">email@email.co</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Key dates</h2><a href='/applications-service/case/4/key-dates' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Key dates</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Anticipated submission date published</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Application submitted (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Acceptance decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Acceptance (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Non-Acceptance</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations open</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations close</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations to appear on website</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Preliminary Meeting start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination closing date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for submission of Recommendation</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Recommendation submitted to SoS</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Recommendation deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Decision deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date project withdrawn</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <button class=\\"govuk-button govuk-!-margin-top-5\\" data-module=\\"govuk-button\\">Accept and publish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Preview and publish page POST /case/123/preview-and-publish if the case is not published yet, should go the first-time success banner page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-panel govuk-panel--confirmation\\">
                <h1 class=\\"govuk-panel__title\\"> Project page successfully published</h1>
                <div class=\\"govuk-panel__body\\">
                    <p class='govuk-!-font-size-19'>Case: Title CASE/04
                        <br>Reference: CASE/04</p>
                </div>
            </div>
            <p class='govuk-!-margin-top-6 govuk-!-margin-bottom-6'>The project will be published to the NI website within the hour.</p>
            <a             href=\\"/applications-service/case/4/\\" class=\\"govuk-link\\">Go back to Overview</a>
        </div>
    </div>
</main>"
`;

exports[`Applications case pages Project overview page (GET /case/123) should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"top-errors-hook\\" role=\\"alert\\"></div>
    <div class=\\"govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary\\">
        <div class=\\"govuk-grid-column-full\\">
            <h4 class=\\"govuk-heading-m\\"> CASE/04 </h4>
            <h1 class=\\"govuk-heading-xl\\">Title CASE/04</h1>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full govuk-body\\">Transport EN, Highways EN
                    <br>
                    <br><strong class=\\"govuk-tag govuk-tag--green\\">Pre-Application</strong>
                </div>
            </div>
        </div>
    </div>
    <div class=\\"govuk-grid-row govuk-!-margin-left-0 display--flex\\">
        <div class=\\"pins-list-menu-container\\">
            <aside class=\\"govuk-!-margin-bottom-8 pins-list-menu\\">
                <h2 class=\\"govuk-visually-hidden\\">Case Details Menu</h2>
                <nav>
                    <ul class=\\"gov-list pins-list-menu\\">
                        <li><a class=\\"govuk-link pins-selected-item\\" href=\\"/applications-service/case/4/\\"> Overview</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/key-dates\\"> Key dates</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-team\\"> Project team</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-documentation\\"> Project documentation</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-updates\\"> Project updates</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/examination-timetable\\"> Examination timetable</a>
                        </li>
                    </ul>
                </nav>
            </aside>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <h2 class=\\"govuk-heading-m\\">Overview</h2>
            <div class=\\"govuk-!-margin-top-6\\"><a href=\\"/applications-service/case/4/preview-and-publish\\" role=\\"button\\"
                draggable=\\"false\\" class=\\"govuk-button\\" data-module=\\"govuk-button\\"> Preview and publish project</a>
            </div>
            <table class=\\"govuk-table project-details\\">
                <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Project details</caption>
                <tbody class=\\"govuk-table__body\\">
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Project name</th>
                        <td class=\\"govuk-table__cell project-details__name\\">Title CASE/04</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/name\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Project description</th>
                        <td class=\\"govuk-table__cell project-details__project-description\\">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                            et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                            ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/description\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Project location</th>
                        <td class=\\"govuk-table__cell project-details__project-location\\">London</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/project-location\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Project email address</th>
                        <td class=\\"govuk-table__cell project-details__team-email\\">some@ema.il</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/team-email\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Grid references</th>
                        <td class=\\"govuk-table__cell project-details__grid-references\\">123456 (Easting)
                            <br>987654 (Northing)</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/grid-references\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Region(s)</th>
                        <td class=\\"govuk-table__cell project-details__regions\\">London EN,Yorkshire EN</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/regions\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Map zoom level</th>
                        <td class=\\"govuk-table__cell project-details__zoom-level\\">City EN</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/zoom-level\\"> Change</a>
                        </td>
                    </tr>
                </tbody>
            </table>
            <h2 class=\\"govuk-heading-m govuk-!-margin-top-9\\">Applicant information</h2>
            <table class=\\"govuk-table\\">
                <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Applicant details</caption>
                <tbody class=\\"govuk-table__body\\">
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Organisation name</th>
                        <td class=\\"govuk-table__cell\\">Org name</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/applicant-organisation-name\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Contact name (Internal use only)</th>
                        <td class=\\"govuk-table__cell\\">John Smith</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/applicant-full-name\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Address (Internal use only)</th>
                        <td class=\\"govuk-table__cell\\">Applicant address, London, ABC123</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/applicant-address\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Website</th>
                        <td class=\\"govuk-table__cell\\">website.web</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/applicant-website\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Email address</th>
                        <td class=\\"govuk-table__cell\\">email@email.co</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/applicant-email\\"> Change</a>
                        </td>
                    </tr>
                    <tr class=\\"govuk-table__row\\">
                        <th scope=\\"row\\" class=\\"govuk-table__header\\">Telephone number (Internal use only)</th>
                        <td class=\\"govuk-table__cell\\">001</td>
                        <td class=\\"govuk-table__cell text-align--right pins-table__cell--s\\"><a class=\\"govuk-link\\" href=\\"/applications-service/case/4/edit/applicant-telephone-number\\"> Change</a>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
</main>"
`;

exports[`Applications case pages Unpublish case page GET /case/123/unpublish should render the page with the right info 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <form id=\\"pins-publish-case\\" class=\\"govuk-grid-row \\" method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-8\\">Unpublish the project</h1>
            <p class=\\"govuk-body govuk-!-margin-bottom-2\\">Case: Title CASE/07</p>
            <p class=\\"govuk-body govuk-!-margin-bottom-6\\">Reference: CASE/07</p>
        </div>
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-warning-text\\"><span class=\\"govuk-warning-text__icon\\" aria-hidden=\\"true\\">!</span>
                <strong                 class=\\"govuk-warning-text__text\\"><span class=\\"govuk-warning-text__assistive\\">Warning</span> Unpublishing
                    will remove the project page and any associated content from the NI website.
                    <br>
                    <br>You will be able to republish the project and content again.</strong>
            </div>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <button class=\\"govuk-button govuk-button--warning govuk-!-margin-top-5\\"
            data-module=\\"govuk-button\\">Unpublish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Unpublish case page POST /case/123/unpublish should go to success page if unpublished worked 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-panel govuk-panel--confirmation\\">
                <h1 class=\\"govuk-panel__title\\"> Project page successfully unpublished</h1>
                <div class=\\"govuk-panel__body\\">
                    <p class='govuk-!-font-size-19'>Case: Title CASE/07
                        <br>Reference: CASE/07</p>
                </div>
            </div>
            <p class='govuk-!-margin-top-6 govuk-!-margin-bottom-6'>The project will be unpublished from the NI website within the hour. You
                can republish the project page and associated content after this.</p>
            <a             href=\\"/applications-service/case/7/\\" class=\\"govuk-link\\">Go back to Overview</a>
        </div>
    </div>
</main>"
`;
